--- a/students/KulbedaKirill/task_2/src/app/globals.css
+++ b/students/KulbedaKirill/task_2/src/app/globals.css
@@ -1,23 +1,17 @@
-@import 'tailwindcss';
+@import url("tailwindcss");
 
 :root {
-  --background: #ffffff;
+  --background: #fff;
   --foreground: #171717;
 }
 
+/* stylelint-disable-next-line at-rule-no-unknown */
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 }
-
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
 
 body {
   background: var(--background);
