--- a/students/KulbedaKirill/task_2/src/app/globals.css
+++ b/students/KulbedaKirill/task_2/src/app/globals.css
@@ -1,16 +1,10 @@
-@import url("tailwindcss");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --background: #fff;
   --foreground: #171717;
-}
-
-/* stylelint-disable-next-line at-rule-no-unknown */
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 body {
